<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>edu.kit.informatik.artemis</groupId>
	<artifactId>build-sample</artifactId>
	<name>Build Example</name>
	<description>Just some Build Example to cache all build dependencies.</description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <scaConfigDirectory>${project.basedir}/staticCodeAnalysisConfig</scaConfigDirectory>
        <analyzeTests>false</analyzeTests>
	</properties>
    <repositories>
      <repository>
        <id>gitlab-maven</id>
        <url>https://gitlab.kit.edu/api/v4/projects/150727/packages/maven</url>
      </repository>
    </repositories>
		<parent>
		<groupId>edu.kit.kastel.sdq.artemis</groupId>
		<artifactId>test-framework-parent</artifactId>
		<version>0.30.0-SNAPSHOT</version>
	</parent>
    <dependencies>
        <dependency>
            <groupId>edu.kit.kastel.sdq.artemis</groupId>
            <artifactId>test-framework</artifactId>
        </dependency>
    </dependencies>
    <build>
        <sourceDirectory>${project.basedir}/assignment/src</sourceDirectory>
        <testSourceDirectory>${project.basedir}/test</testSourceDirectory>
        <testResources>
            <testResource>
                <directory>${project.basedir}/test</directory>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.3</version>
                <configuration>
                    <argLine>-Dfile.encoding=UTF-8 -Djava.security.manager=allow</argLine>
                    <systemProperties>
                        <property>
                            <name>sourceDirectory</name>
                            <value>${project.build.sourceDirectory}</value>
                        </property>
                    </systemProperties>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
